# data-registry

./: .env.docker  .env.local  .env.minikube  .gitignore  .pre-commit-config.yaml  Dockerfile  README copy.md  README.md  THESIS.md  env.sample  pyproject.toml  test.ipynb  test.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: ci-docker-build-push.yaml  run-base-pipelines.yaml  run-data-pipelines.yaml  run-embeddings-pipeline.yaml  run-pipelines.yaml  test.yaml  train.yaml
data/emotion/: metadata.json
data/emotion/raw/: .gitignore
data/fashion-mnist/: .gitignore  metadata.json
data/fashion-mnist/processed/: .gitignore
data/opencloudhub-readmes/: metadata.json
data/opencloudhub-readmes-embeddings/: metadata.json
data/opencloudhub-readmes-evaluation/: questions.csv
data/opencloudhub-readmes-rag-evaluation/: questions.csv.dvc
data/radiology-mini/: metadata.json
data/roco-radiology/: metadata.json
data/wine-quality/: .gitignore  metadata.json
notebooks/: test.ipynb
pipelines/emotion/: dvc.yaml  params.yaml
pipelines/fashion-mnist/: dvc.yaml  params.yaml
pipelines/opencloudhub-readmes-download/: dvc.yaml  params.yaml
pipelines/opencloudhub-readmes-embeddings/: dvc.yaml  params.py  params.yaml  run_pipeline.py
pipelines/radiology-mini/: dvc.yaml  params.yaml
pipelines/roco-radiology/: dvc.yaml  params.yaml
pipelines/wine-quality/: dvc.yaml  params.yaml
scripts/: bootstrap-data-examples.sh  create_push_example_tags.sh  reset-for-demo.sh  run-all copy.sh  run-all-base.sh  run-all.sh
(+26 files in other folders)
