[project]
name = "Data-Registry"
version = "1.0.0"
description = "Centralized data versioning with DVC for reproducible ML pipelines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.1",
    "dvc[s3]>=3.64.0",
    "langchain>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "mlflow>=3.6.0",
    "numpy>=2.3.4",
    "psycopg[binary]>=3.2.13",
    "pyarrow>=22.0.0",
    "ray[data,default]>=2.51.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
]
[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]
